Bug 1136253 - Use lighter text for the Request URL in the inspector pane when in dark mode. r=jsantell
UltraBlame original commit: 6a4698e03d5e64db8204074e71ee2fae1a193bb4

--- a/browser/themes/shared/devtools/netmonitor.inc.css
+++ b/browser/themes/shared/devtools/netmonitor.inc.css
@@ -3639,6 +3639,31 @@ start
 3px
 ;
 }
+.
+theme
+-
+dark
+.
+tabpanel
+-
+summary
+-
+value
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+selection
+-
+color
+)
+;
+}
 /
 *
 Headers
